+Thread & ScheduleExecutorService & Exchanger